src/style.css
/* ... */
.btn--big {
	padding: 15px 30px;
	border-radius: 3px;
}

.btn-icon {
	display: inline-flex;
	align-items: center;
}

.btn:hover {
	text-decoration: none;
	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.25);
}

*:focus {
	outline-width: 4px;
	outline-color: var(--color-button);
	outline-style: solid;
	outline-offset: 1px;
}

.btn-icon > svg {
	width: 20px;
	height: 20px;
	fill: currentColor;
	vertical-align: middle;
	margin-right: 8px;
}

.btn--big > svg {
	width: 25px;
	height: 25px;
	margin-right: 12px;
}

.btn-loader {
	display: none;
}

.is-loading > svg {
	display: none;
}

.is-loading .btn-loader {
	display: block;
}

.star:after {
	content: '★';
	color: currentColor;
}

/* used to show keyboard specific content when something is keyboard focused */

.show-when-selected {
	display: none;
}

.selected .show-when-selected {
	display: inline-block;
}

.main-container {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	display: flex;
	flex-direction: column;
	overflow: hidden;
	transition: 0.1s ease 0.2s;
	will-change: filter;
}

body:not(.light-version).overlay-visible .main-container {
	transition-duration: 0.5s;
	transition-delay: 0.4s;
	filter: blur(3px);
}

.content-wrap {
	/* HACK:  */
	height: 1px;
	/* HACK: 70px is approx header+footer. This is required to because
	on FF the content-wrap goes beyond the flex parent otherwise. */
	max-height: calc(100% - 70px);
}

.code-side,
.demo-side {
	flex-basis: inherit;
	position: relative;
	width: 50%;
}

.demo-side .promotion {
	height: 35px;
	line-height: 35px;
}

div.toolbox>svg {
	margin: 5px;
}

.layout-3 .content-wrap {
	flex-direction: row-reverse;
}

.code-side {
	display: flex;
	flex-direction: column;
}

.layout-2 .content-wrap {
	flex-direction: column;
}

.layout-2 .code-side {
	flex-direction: row;
	width: auto;
}

.layout-2 .demo-side {
	width: auto;
}

/* All vertical layout */

.layout-5 .code-side {
	flex-direction: row;
	width: auto;
}

.layout-5 .code-wrap {
	height: auto;
}

/* Fullscreen layout */

.layout-4 .code-side {
	display: none;
}

.layout-4 .code-side + .gutter {
	display: none;
}

.layout-4 .demo-side {
	width: 100% !important;
}

.is-detached-mode .demo-side {
	/* display: none; */
	width: 0px !important;
	height: 0px !important;
}

.is-detached-mode .code-side {
	width: 100% !important;
}

.is-detached-mode.layout-2 .code-side {
	height: auto !important;
}

.code-wrap {
	display: flex;
	flex-direction: column;
	flex-basis: inherit;
	/*height: 33%;*/
	/*overflow: hidden;*/
	position: relative;
	background: var(--color-bg);
	transition: height 0.3s ease, width 0.3s ease;
	will-change: height;
}

.layout-2 .code-wrap.is-minimized,
.layout-5 .code-wrap.is-minimized {
	flex-direction: row;
}

.is-dragging .code-wrap {
	transition: none;
}

.layout-2 .code-wrap {
	height: auto;
}

/* .code-wrap__header {
	display: flex;
	flex-shrink: 0;
	justify-content: space-between;
	align-items: center;
	padding: 5px 10px;
	background: rgba(0, 0, 0, 0.2);
	color: #888;
	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
	font-weight: bold;
	user-select: none;
} */

.code-wrap__header-label {
	/*transform: translate(0px) scale(1.2);*/
	display: inline-block;
	font-size: 1.1em;
	/*transform-origin: left center;*/
}

.layout-2 .code-side .is-minimized .code-wrap__header,
.layout-5 .code-side .is-minimized .code-wrap__header {
	writing-mode: vertical-lr;
	padding: 10px 5px;
}

.code-wrap__header .caret {
	transition: 0.2s ease;
}

.is-minimized .code-wrap__header .caret {
	opacity: 0;
}

.code-wrap__header-btn {
	display: inline-block;
	vertical-align: top;
	margin-left: 8px;
}

.code-wrap__header-btn,
.code-wrap__header-btn > svg {
	width: 18px;
	height: 18px;
}

.code-wrap__header-right-options {
	position: relative;
	/* bring over mode select boxes */
	z-index: 1;
}

.code-wrap__collapse-btn:before {
	/* maximize icon */
	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" style="width:18px;height:18px" viewBox="0 0 24 24"><path fill="rgba(255,255,255,0.2)" d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>');
}

.is-maximized .code-wrap__collapse-btn:before {
	/* minimize icon */
	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" style="width:18px;height:18px" viewBox="0 0 24 24"><path fill="rgba(255,255,255,0.2)" d="M19.5,3.09L15,7.59V4H13V11H20V9H16.41L20.91,4.5L19.5,3.09M4,13V15H7.59L3.09,19.5L4.5,20.91L9,16.41V20H11V13H4Z" /></svg>');
}

@keyframes pop-in {
	from {
		transform: scale(0.9);
		opacity: 0;
	}

	to {
		transform: scale(1);
		opacity: 1;
	}
}

/* Codemirror */

.CodeMirror {
	width: 100%;
	/*height: calc(100% - 25px);*/
	height: auto;
	/* 25px for header */
	font-size: var(--code-font-size);
}

/* TODO: Check why? */

.layout-2 .is-minimized .Codemirror,
.layout-5 .is-minimized .Codemirror {
	height: calc(100%);
}

.CodeMirror pre {
	font-variant-ligatures: contextual;
}

.cm-s-monokai .CodeMirror-linenumber {
	color: rgba(255, 255, 255, 0.2);
}

.cm-s-monokai.CodeMirror,
.cm-s-monokai .CodeMirror-gutters {
	background: var(--color-bg);
}

.cm-s-monokai .CodeMirror-guttermarker-subtle {
	opacity: 0.4;
}

.cm-s-monokai .CodeMirror-activeline-background,
.cm-s-monokai .CodeMirror-activeline-gutter {
	background: rgba(0, 0, 0, 0.1) !important;
}

.CodeMirror-guttermarker-subtle {
	/*visibility: hidden !important;*/
}

.CodeMirror-gutter-wrapper:hover .CodeMirror-guttermarker-subtle {
	/*visibility: visible;*/
}

.CodeMirror-hints {
	font-size: var(--code-font-size);
	border: 0;
	background: #1e1e2c;
}

.CodeMirror-hint {
	color: #bbb;
	padding: 2px 4px;
}

li.CodeMirror-hint-active {
	background: #5b429d;
	/*color: white;*/
}

#demo-frame {
	border: 0;
	width: 100%;
	height: calc(100%);
	/*height: calc(100% - 29px); height reserved for console*/
	/*  minus minimized console height */
	position: absolute;
	z-index: 1;
	background: white;
}
/* ... */

